# viaNexus-agent-sdk-python

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
examples/clients/anthropic/: ask_with_persistent_session_memory.py  mcp_session_persistence_demo.py  persistent_memory_demo.py  persistent_session.py  service_integration.py  single_questions.py
examples/clients/gemini/: basic_setup.py  conversation_with_history.py  memory_integration.py  persistent_session.py  tool_calling_demo.py
examples/clients/openai/: basic_setup.py  config_from_yaml.py  conversation_with_history.py  interactive_repl.py  memory_integration.py  persistent_session.py  tool_calling_demo.py
examples/memory/: README.md  anthropic_inmemory_integration.py  basic_memory_example.py  cross_client_conversation.py  mcp_memory_session_correlation.py  s3_memory_example.py  session_isolation_demo.py  simple_inmemory_usage.py
examples/memory/isolated_sessions_demo/messages/: anthropic_analyst_002_earnings_analysis_20250919_151018_d438613f.jsonl  anthropic_strategist_001_cloned_20250919_151018_f3058d1e.jsonl  anthropic_strategist_001_investment_strategy_20250919_151018_3ae12579.jsonl  anthropic_trader_001_market_research_20250919_151018_c0d44f06.jsonl  anthropic_trader_001_portfolio_analysis_20250919_151018_ec8780d3.jsonl  anthropic_trader_001_risk_assessment_20250919_151018_ffdc3cea.jsonl
examples/memory/isolated_sessions_demo/sessions/: anthropic_strategist_001_cloned_20250919_151018_f3058d1e.json  (+5 more)
examples/unified_client/: basic_factory_usage.py  config_based_selection.py  real_world_usage.py
src/vianexus_agent_sdk/: __init__.py  debug_utils.py
src/vianexus_agent_sdk/clients/: __init__.py  anthropic_client.py  base_llm_client.py  gemini_client.py  llm_client_factory.py  openai_client.py
src/vianexus_agent_sdk/mcp_client/: base_mcp_client.py  enhanced_mcp_client.py  streamable_http.py
src/vianexus_agent_sdk/memory/: __init__.py  base_memory.py  memory_mixin.py  session_manager.py
src/vianexus_agent_sdk/types/: config.py
(+12 files in other folders)
