[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vianexus_agent_sdk"
version = "1.0.0-pre8"
authors = [
  { name="viaNexus", email="support@vianexus.com" },
]
description = "A Python SDK for the viaNexus AI Agent."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic<3.0.0",
    "mcp>=1.15.0",
    "google-generativeai==0.5.4",
    "google-genai==1.25.0",
    "requests==2.32.4",
    "httpx<1.0.0",
    "anyio<5.8.0",
    "anthropic>=0.64.0",
    "openai>=2.0.0",
    "aiofiles>=24.0.0",
]

[project.urls]
"Homepage" = "https://github.com/blueskynexus/viaNexus-agent-sdk-python"
"Bug Tracker" = "https://github.com/blueskynexus/viaNexus-agent-sdk-python/issues" 
